# virtual-embedded-systems-lab

./: .gitmodules  README.md  blinky.elf  blinky.elf.old  test.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  novnc  setup.sh  x11vnc  xvfb
.stm32f407vg/: CMakeLists.txt  run.py  toolchain.cmake
.stm32f407vg/stm32f4xx/: CMakeLists.txt
.stm32f407vg/stm32f4xx/src/: _initialize_hardware.c  stm32f407vg copy 2.ld
Labs/1. Introduction/: README.md  main.c  part1.elf  part2.c  part3.c
Labs/2. Interrupts/: README.md  main.c  part1.c  part2.c
Labs/3. BitBang SPI/: README.md  main.c  part2.c
Labs/4. SPI Based Driver/: README.md  adt7320.c  spi.h
Labs/5. FSM/: README.md  part1.c  part3.c
f407-disc-blink-tutorial/: toolchain.cmake
f407-disc-blink-tutorial.rev1/: CMakeLists.txt  toolchain.cmake
f407-disc-blink-tutorial.rev1/ldscripts/: linker.ld
f407-disc-blink-tutorial.rev1/src/: main.cpp
f407-disc-blink-tutorial.rev2/: CMakeLists.txt
f407-disc-blink-tutorial.rev2/src/: main.c
f407-disc-blink-tutorial/src/: main.c
f407-disc-blink-tutorial/system/src/: _initialize_hardware.c
